--- a/docs/（电脑版）控制客户端/新版电脑客户端使用指南.md
+++ b/docs/（电脑版）控制客户端/新版电脑客户端使用指南.md
@@ -1,4 +1,8 @@
-﻿# 新版电脑客户端使用指南
+---
+slug: /pc-client
+---
+
+# 新版电脑客户端使用指南
 
 1. 下载[https://update.ezsapi.top/control-panel/UnderSilicon.zip](https://update.ezsapi.top/control-panel/UnderSilicon.zip)
 2. **<font>请解压后安装 解压失败可以安装</font>**[7zip](https://www.7-zip.org/download.html)**<font> 之后用该软件解压</font>**
