--- a/i18n/en/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
@@ -1,17 +1,21 @@
-# New PC Client Usage Guide
+---
+slug: /pc-client
+---
+
+# New PC Client User Guide
 
 1. Download [https://update.ezsapi.top/control-panel/UnderSilicon.zip](https://update.ezsapi.top/control-panel/UnderSilicon.zip)
-2. **<font>Please extract and then install. If extraction fails, install</font>**[7zip](https://www.7-zip.org/download.html)**<font> first, then use that software to extract.</font>**
-3. **<font>Launch the client</font>**
-4. **<font>Enable the PC hotspot, set the WiFi name to easysmart, password to eight 1s, and the frequency band to</font>****<font>2.4G</font>****<font> (See below if there is no PC hotspot).</font>**
-5. **<font>(Important)</font>****<font>If the device is connected to the WiFi but not appearing in the client, it might be blocked. Try turning off the PC firewall.</font>**
-6. **<font>Start the device. It should automatically connect to the PC within about 15-30 seconds after startup.</font>**
-7. **<font>You can start having fun!</font>**
+2. **<font>Please extract and install after downloading. If extraction fails, install</font>** [7zip](https://www.7-zip.org/download.html) **<font>and use it to extract the file.</font>**
+3. **<font>Start the client.</font>**
+4. **<font>Enable the PC hotspot, set the Wi-Fi name to 'easysmart', password to '8 ones', and the band to</font>****<font>2.4G</font>****<font>band. (If there is no PC hotspot, see the section below.)</font>**
+5. **<font>(Important)</font>****<font>If the device connects to the Wi-Fi but does not appear in the client, it may be blocked. You need to disable the computer firewall.</font>**
+6. **<font>Power on the device. It will automatically connect to the computer about 15-30 seconds after startup.</font>**
+7. **<font>You can start enjoying it now!</font>**
 
+ 
 
-
-## Usage Without PC Hotspot
-1. Configure the device's network: Refer to [Connecting Devices to WiFi via APP](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md) to connect the device to your home WiFi (Note: Must be 2.4G WiFi).
+## How to Use Without PC Hotspot
+1. Configure device network: Refer to [Connecting Devices to WiFi via APP](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md) to connect the device to your home WiFi (Note: it must be 2.4G WiFi).
 2. Enable mDNS in the client.
 
 ![1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87.png](./img/QhfCe6tcWnz7mH1G/1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87-759484.png)
