--- a/i18n/es/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
+++ b/i18n/es/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
@@ -1,18 +1,21 @@
-# Guía de uso de la nueva versión del cliente de escritorio
+---
+slug: /pc-client
+---
 
-1.  Descarga [https://update.ezsapi.top/control-panel/UnderSilicon.zip](https://update.ezsapi.top/control-panel/UnderSilicon.zip)
-2.  **<font>Por favor, descomprime antes de instalar. Si la descompresión falla, puedes instalar</font>**[7zip](https://www.7-zip.org/download.html)**<font> y luego usar este software para descomprimir.</font>**
-3.  **<font>Inicia el cliente.</font>**
-4.  **<font>Habilita el punto de acceso del ordenador, configura el nombre de la red WiFi como 'easysmart', la contraseña como ocho '1' y la banda como</font>****<font>2.4G</font>****<font> (si no tienes punto de acceso en el ordenador, consulta más adelante).</font>**
-5.  **<font>(Importante)</font>****<font>Si el dispositivo se conecta al WiFi pero el cliente no lo detecta, significa que está siendo bloqueado y necesitas desactivar el firewall del ordenador.</font>**
-6.  **<font>Enciende el dispositivo. Aproximadamente 15-30 segundos después de encenderse, se conectará automáticamente al ordenador.</font>**
-7.  **<font>¡Ya puedes empezar a disfrutar!</font>**
+# Guía de uso del nuevo cliente para PC
 
+1. Descarga [https://update.ezsapi.top/control-panel/UnderSilicon.zip](https://update.ezsapi.top/control-panel/UnderSilicon.zip)
+2. **<font>Por favor, instala después de descomprimir. Si falla la descompresión, puedes instalar</font>**[7zip](https://www.7-zip.org/download.html)**<font> y luego usar este software para descomprimir.</font>**
+3. **<font>Inicia el cliente.</font>**
+4. **<font>Habilita el hotspot del computador, configura el nombre de WiFi como easysmart, la contraseña como ocho unos (8 unos) y la banda como</font>****<font>2.4G</font>****<font> (si no hay hotspot en el computador, consulta más adelante).</font>**
+5. **<font>(Importante)</font>****<font>Si el dispositivo se conecta al WiFi pero el cliente no lo detecta, es posible que esté bloqueado. Necesitas desactivar el firewall del computador.</font>**
+6. **<font>Enciende el dispositivo. Aproximadamente 15-30 segundos después de encenderse, se conectará automáticamente al computador.</font>**
+7. **<font>¡Ya puedes comenzar a disfrutar!</font>**
 
+ 
 
-## Modo de uso cuando no hay punto de acceso en el ordenador
-
-1.  Configuración de red del dispositivo: Consulta [Conectar el dispositivo a WiFi mediante la APP](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md) para conectar el dispositivo a la red WiFi de tu casa (debe ser una red WiFi de 2.4G).
-2.  Habilita mDNS en el cliente.
+## Método de uso cuando no hay hotspot en el computador
+1. Configuración de red del dispositivo: consulta [Conectar el dispositivo a WiFi mediante la APP](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md) para conectar el dispositivo al WiFi de tu casa (debe ser WiFi de 2.4G).
+2. Habilita mDNS en el cliente.
 
 ![1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87.png](./img/QhfCe6tcWnz7mH1G/1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87-759484.png)
