--- a/i18n/de/docusaurus-plugin-content-blog/options.json
+++ b/i18n/de/docusaurus-plugin-content-blog/options.json
@@ -8,7 +8,7 @@
     "description": "The description for the blog used in SEO"
   },
   "sidebar.title": {
-    "message": "Aktuelle Beiträge",
+    "message": "Neueste Beiträge",
     "description": "The label for the left sidebar"
   }
 }
