--- a/i18n/de/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
+++ b/i18n/de/docusaurus-plugin-content-docs/current/（电脑版）控制客户端/新版电脑客户端使用指南.md
@@ -1,15 +1,19 @@
-# Leitfaden zur Verwendung der neuen PC-Client-Version
+---
+slug: /pc-client
+---
+
+# Anleitung für die neue PC-Client-Version
 
 1. Laden Sie [https://update.ezsapi.top/control-panel/UnderSilicon.zip](https://update.ezsapi.top/control-panel/UnderSilicon.zip) herunter.
-2. **<font>Bitte nach dem Herunterladen entpacken und installieren. Bei Entpackungsfehlern können Sie</font>** [7zip](https://www.7-zip.org/download.html) **<font>installieren und dann die Software zum Entpacken verwenden.</font>**
+2. **<font>Bitte nach dem Herunterladen entpacken und installieren. Bei Entpackungsfehlern können Sie</font>**[7zip](https://www.7-zip.org/download.html)**<font> installieren und dann mit dieser Software entpacken.</font>**
 3. **<font>Starten Sie den Client.</font>**
-4. **<font>Aktivieren Sie den PC-Hotspot. Stellen Sie den WLAN-Namen auf »easysmart« und das Passwort auf acht Einsen (»11111111«) ein. Das Frequenzband muss das</font>****<font>2,4-GHz</font>****<font>-Band sein. (Wenn kein PC-Hotspot verfügbar ist, siehe weiter unten.)</font>**
-5. **<font>(Wichtig)</font>****<font>Wenn das Gerät mit dem WLAN verbunden ist, aber im Client nicht angezeigt wird, wurde die Verbindung möglicherweise blockiert. Deaktivieren Sie in diesem Fall die PC-Firewall.</font>**
-6. **<font>Schalten Sie das Gerät ein. Etwa 15–30 Sekunden nach dem Start verbindet es sich automatisch mit dem PC.</font>**
-7. **<font>Jetzt kann der Spaß beginnen!</font>**
+4. **<font>Aktivieren Sie den Computer-Hotspot, setzen Sie den WLAN-Namen auf „easysmart“, das Passwort auf acht Einsen (11111111) und das Frequenzband auf das</font>****<font>2,4 GHz</font>****<font>-Band (falls kein Computer-Hotspot verfügbar ist, siehe weiter unten).</font>**
+5. **<font>(Wichtig)</font>****<font>Wenn das Gerät mit dem WLAN verbunden ist, der Client aber keine Geräte anzeigt, wurde die Verbindung blockiert. Deaktivieren Sie in diesem Fall die Windows-Firewall.</font>**
+6. **<font>Starten Sie das Gerät. Nach etwa 15–30 Sekunden verbindet es sich automatisch mit dem Computer.</font>**
+7. **<font>Jetzt können Sie loslegen und Spaß haben!</font>**
 
-## Vorgehensweise, wenn kein PC-Hotspot verfügbar ist
-1. Gerät ins Netzwerk einbinden: Befolgen Sie die Anleitung unter [Gerät per App mit WLAN verbinden](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md), um das Gerät mit Ihrem Heim-WLAN zu verbinden (Achtung: Es muss ein 2,4-GHz-WLAN sein).
+## So gehen Sie vor, wenn kein Computer-Hotspot verfügbar ist
+1. Geräteeinrichtung: Befolgen Sie die Anleitung unter [Gerät mit WLAN verbinden (Einrichtung)/Über die App](../其他使用说明/设备连接wifi（配网）/通过APP将设备连接到wifi.md), um das Gerät mit Ihrem Heim-WLAN zu verbinden (beachten Sie, dass es sich um ein 2,4-GHz-WLAN handeln muss).
 2. Aktivieren Sie mDNS im Client.
 
 ![1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87.png](./img/QhfCe6tcWnz7mH1G/1764167602427-6eb0053e-9d4e-449c-8a85-4608c37c5c87-759484.png)
