--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -1,6 +1,6 @@
 {
   "theme.ErrorPageContent.title": {
-    "message": "The page has crashed.",
+    "message": "Page has crashed.",
     "description": "The title of the fallback page when the page crashed"
   },
   "theme.BackToTopButton.buttonAriaLabel": {
@@ -8,23 +8,23 @@
     "description": "The ARIA label for the back to top button"
   },
   "theme.blog.archive.title": {
-    "message": "Blog Archive",
+    "message": "Historical Blog Posts",
     "description": "The page & hero title of the blog archive page"
   },
   "theme.blog.archive.description": {
-    "message": "Blog Archive",
+    "message": "Historical Blog Posts",
     "description": "The page & hero description of the blog archive page"
   },
   "theme.blog.paginator.navAriaLabel": {
-    "message": "Blog list pagination navigation",
+    "message": "Blog post list pagination navigation",
     "description": "The ARIA label for the blog pagination"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "Newer posts",
+    "message": "Newer blog posts",
     "description": "The label used to navigate to the newer blog posts page (previous page)"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "Older posts",
+    "message": "Older blog posts",
     "description": "The label used to navigate to the older blog posts page (next page)"
   },
   "theme.blog.post.paginator.navAriaLabel": {
@@ -56,7 +56,7 @@
     "description": "The name for the dark color mode"
   },
   "theme.colorToggle.ariaLabel": {
-    "message": "Toggle light/dark mode (current: {mode})",
+    "message": "Toggle light/dark mode (currently {mode})",
     "description": "The ARIA label for the color mode toggle"
   },
   "theme.docs.DocCard.categoryDescription.plurals": {
@@ -68,7 +68,7 @@
     "description": "The ARIA label for the breadcrumbs"
   },
   "theme.docs.paginator.navAriaLabel": {
-    "message": "Doc pagination",
+    "message": "Document tabs",
     "description": "The ARIA label for the docs pagination"
   },
   "theme.docs.paginator.previous": {
@@ -91,19 +91,19 @@
     "message": "Version: {versionLabel}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "This is the unreleased documentation for {siteTitle} {versionLabel}.",
+    "message": "This is the unreleased documentation for {siteTitle} version {versionLabel}.",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "This is the documentation for {siteTitle} {versionLabel}, which is no longer actively maintained.",
+    "message": "This is the documentation for {siteTitle} version {versionLabel}, which is no longer actively maintained.",
     "description": "The label used to tell the user that he's browsing an unmaintained doc version"
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
-    "message": "For the latest documentation, see {latestVersionLink} ({versionLabel}).",
+    "message": "See the latest documentation at {latestVersionLink} ({versionLabel}).",
     "description": "The label used to tell the user to check the latest version"
   },
   "theme.docs.versions.latestVersionLinkLabel": {
-    "message": "latest version",
+    "message": "Latest version",
     "description": "The label used for the latest version suggestion link label"
   },
   "theme.common.editThisPage": {
@@ -115,7 +115,7 @@
     "description": "Title for link to heading"
   },
   "theme.lastUpdated.atDate": {
-    "message": "on {date}",
+    "message": "at {date}",
     "description": "The words used to describe on which date a page has been last updated"
   },
   "theme.lastUpdated.byUser": {
@@ -127,7 +127,7 @@
     "description": "The sentence used to display when a page has been last updated, and by who"
   },
   "theme.NotFound.title": {
-    "message": "Page Not Found",
+    "message": "Page not found",
     "description": "The title of the 404 page"
   },
   "theme.navbar.mobileVersionsDropdown.label": {
@@ -167,7 +167,7 @@
     "description": "The ARIA label for close button of announcement bar"
   },
   "theme.blog.sidebar.navAriaLabel": {
-    "message": "Recent posts navigation",
+    "message": "Recent blog posts navigation",
     "description": "The ARIA label for recent posts in the blog sidebar"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
@@ -191,7 +191,7 @@
     "description": "The first paragraph of the 404 page"
   },
   "theme.NotFound.p2": {
-    "message": "Please contact the owner of the site that linked you to the original URL and let them know their link is broken.",
+    "message": "Please contact the owner of the site from which you got the original link and inform them that the link is broken.",
     "description": "The 2nd paragraph of the 404 page"
   },
   "theme.TOCCollapsible.toggleButtonLabel": {
@@ -207,7 +207,7 @@
     "description": "The label used in blog post item excerpts to link to full blog posts"
   },
   "theme.blog.post.readMoreLabel": {
-    "message": "Read full post for {title}",
+    "message": "Read the full post of {title}",
     "description": "The ARIA label for the link to full blog posts from excerpts"
   },
   "theme.blog.post.readingTime.plurals": {
@@ -295,23 +295,23 @@
     "description": "The label of the link targeting the blog authors page"
   },
   "theme.blog.author.noPosts": {
-    "message": "This author has not written any posts yet.",
+    "message": "This author has not written any articles yet.",
     "description": "The text for authors with 0 blog post"
   },
   "theme.contentVisibility.unlistedBanner.title": {
-    "message": "Unlisted page",
+    "message": "Unlisted Page",
     "description": "The unlisted content banner title"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "This page is unlisted. It will not be indexed by search engines, and only users with the direct link can access it.",
+    "message": "This page is unlisted. Search engines will not index it, and only users with a direct link can access it.",
     "description": "The unlisted content banner message"
   },
   "theme.contentVisibility.draftBanner.title": {
-    "message": "Draft page",
+    "message": "Draft Page",
     "description": "The draft content banner title"
   },
   "theme.contentVisibility.draftBanner.message": {
-    "message": "This page is a draft. It is only visible in development environments and will not be included in production releases.",
+    "message": "This page is a draft. It is only visible in the development environment and will not be included in the production build.",
     "description": "The draft content banner message"
   },
   "theme.ErrorPageContent.tryAgain": {
@@ -327,49 +327,49 @@
     "description": "The title of the tag list page"
   },
   "homepage.visitDocs": {
-    "message": "Visit Docs"
+    "message": "Visit the documentation"
   },
   "homepage.title": {
     "message": "Welcome to {title}"
   },
   "homepage.description": {
-    "message": "UnderSilicon Documentation Site"
+    "message": "UnderSilicon documentation website"
   },
   "易于使用": {
-    "message": "Easy to Use"
+    "message": "Easy to use"
   },
   "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
-    "message": "Docusaurus is designed from the ground up to be easily installed and used to get your website up and running quickly."
+    "message": "Docusaurus is designed from the ground up to be easy to install and use, so you can get your website up and running quickly."
   },
   "专注于核心内容": {
-    "message": "Focus on Your Content"
+    "message": "Focus on your content"
   },
   "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
-    "message": "Docusaurus lets you focus on your docs, and we'll do the chores. Just drop your documents into the {docs} directory."
+    "message": "Docusaurus lets you focus on your docs, and we'll handle the chores. Simply place your documents in the {docs} directory."
   },
   "基于 React 构建": {
-    "message": "Built Using React"
+    "message": "Built using React"
   },
   "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
-    "message": "Extend or customize your website layout by reusing React. Docusaurus can be extended while reusing the same header and footer."
+    "message": "Extend or customize your website layout by reusing React. Docusaurus allows you to extend while reusing the header and footer."
   },
   "homepage.downloadClient": {
-    "message": "Download Client"
+    "message": "Download client"
   },
   "硬件生态与连接": {
-    "message": "Hardware Ecosystem and Connectivity"
+    "message": "Hardware Ecosystem & Connectivity"
   },
   "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
-    "message": "Supports multiple smart devices (motors, vibrators, pulse, etc.), fast WiFi setup, stable connection, easy to get started."
+    "message": "Supports various smart devices (motor, vibrator, pulse, etc.), rapid WiFi setup, stable connection, easy to get started."
   },
   "无限创意玩法": {
     "message": "Unlimited Creative Play"
   },
   "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
-    "message": "Built-in push-up detection, shock Q&A, edge training, and various fun interactive modes to make control more interesting."
+    "message": "Built-in fun interactive modes such as push-up detection, shock Q&A, edging training, making control more interesting."
   },
   "全平台控制": {
-    "message": "Cross-Platform Control"
+    "message": "Cross-platform Control"
   },
   "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
     "message": "Provides powerful PC client and mobile support (App/Mini Program), allowing you to control device status anytime, anywhere."
@@ -378,12 +378,12 @@
     "message": "Open Development Ecosystem"
   },
   "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
-    "message": "Provides Python control interfaces and open-source code, supporting developer customization and extension to build a smart toy experience together."
+    "message": "Provides Python control interface and open-source code, supports developer customization and extension, co-creating the smart toy experience."
   },
   "homepage.heroTitle": {
     "message": "UnderSilicon Documentation"
   },
   "homepage.heroTagline": {
-    "message": "Explore the UnderSilicon intelligent ecosystem and unlock unlimited interactive play."
+    "message": "Explore the UnderSilicon intelligent ecosystem and unlock infinite interactive play"
   }
 }
