--- a/i18n/ja/docusaurus-theme-classic/navbar.json
+++ b/i18n/ja/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "シリコン基盤の下 (UnderSilicon) ドキュメント",
+    "message": "シリコン・ベース(UnderSilicon) ドキュメント",
     "description": "The title in the navbar"
   },
   "logo.alt": {
